--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,112 @@ body {
     padding: 0;
 }
 
-.contenedor1 {
+.pantallas {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* Primera Pantalla --<<<<< */
+#pantalla1 {
     background-image: url(/img/firstScreen.jpg);
     background-size: cover;
-    height: 40em;
-    width: 50em; 
 }
+
+.contenedor1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40em;
+    width: 50em;
+    flex-direction: column;
+}
+.credit {
+    display: flex;
+    font-size: xx-large;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+/* Segunda Pantalla --<<< */
+
+#pantalla2 {
+    background-image: url(/img/firstScreen.jpg);
+    background-size: cover; 
+}
+.contenedorBoats {
+    display: flex;
+    margin-top: 5em;
+}
+.contenedorBoats1 {
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+    height: 20em;
+    margin-right: 20em;
+}
+
+.contenedorBoats2 {
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+    height: 20em;
+}
+.boatRed {
+    display: flex;
+    height: 16em;
+    width: 20em;
+    margin-left: 1.25em;
+    justify-content: center;
+}
+.boatBlue {
+    display: flex;
+    height: 16em;
+    width: 20em;
+    justify-content: center;
+    margin-left: 1.25em;
+}
+#texto {
+    display: flex;
+    font-family: 'Courier New', Courier, monospace;
+    justify-content: center;
+    align-items: center;
+    font-size: xx-large;
+}
+.contenedorPlayerCpu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: fantasy;
+    font-size: xx-large;
+}
+.contenedorSelect {
+    margin-top: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: xx-large;
+
+}
+.contenedorSeleccion {
+    margin-top: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: xx-large;
+    font-weight: bolder;
+    width: 100%;
+    height: 5em;
+}
+.dataBoat {
+    border: 1em red;
+}
+
+
