--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,112 @@ body {
     width: 100%;
     height: 5em;
 }
-.dataBoat {
-    border: 1em red;
+.seleccionado {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+/* Tercera Pantalla --<<<< */
+
+#pantalla3 {
+    background-image: url(/img/gameScreen.jpg);
+    background-size: cover;  
+}
+.contenedorGrande {
+    display: flex;
+}
+.contenedor3 {
+    display: flex;
+    height: 100%;
+    width: 25em;
+    flex-direction: column;
+    margin-left: 3em;
+    margin-top: 3em;
+}
+
+.boat1 {
+    display: flex;
+    flex-direction: column;
+    width: 15em;
+    height: 10em;
+    margin-top: 5em;
+    margin-bottom: 2em;
+    /* margin-left: 78em; Victoria */
+}
+
+.imgBoat1 {
+    display: flex;
+    width: 15em;
+    height: 8em;
+    background-image: url(/img/barcoAzul1.png);
+    background-size: cover;
+    z-index: 30;
+    rotate: 140;
+}
+
+.valla {
+    display: flex;
+    height: 1em;
+    width: 90em;
+    background-image: url(/img/vallapiscinafinal.jpg);
+    background-size: cover;
+
+}
+.boat2 {
+    display: flex;
+    flex-direction: column;
+    width: 15em;
+    height: 10em;
+    margin-top: 3em;
+    margin-bottom: 2em;
+}
+
+.imgBoat2 {
+    display: flex;
+    width: 15em;
+    height: 8em;
+    rotate: (30);
+    background-image: url(/img/barcoAzul1.png);
+    background-size: cover;
+    z-index: 40;
+}
+
+.waveGif {
+    display: flex;
+    background-color: purple;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2.3em;
+    height: 1em;
+    width: 9em;
+    background-image: url(/img/waves.gif);
+    background-size: cover;
+    z-index: 100;
+    margin-bottom: 3.5em;
+    border-radius: 0em 0em 1em 1em;
+ 
+}
+.runButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: fantasy;
+    font-weight: bolder;
+    border-radius: 45%;
+    width: 13em;
+    height: 9em;
+    background-color: rgb(46, 46, 234);
+    -webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 11px 5px rgba(0,0,0,0); 
+    box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 11px 5px rgba(0,0,0,0);
+}
+
+.lineaMeta {
+    display: flex;
+    background-image: url(/img/meta.png);
+    background-size: cover;
+    height: 46.5em;
+    width: 5em;
+    margin-left: 63.5em;
 }
 
 
